Fix horizontal scrollbar in popup.
Positioning the add-as-project-folder icon via a negative margin sometimes
pushes the icon past the width threshold for the modal. Instead, we can just
Give it an automatic width and remove the margins that are shoving it around to
get similarly-improved spacing without going out-of-bounds.

--- a/styles/advanced-open-file.less
+++ b/styles/advanced-open-file.less
@@ -19,11 +19,15 @@
         .add-project-folder {
             float: right;
             color: @text-color-subtle;
-            margin-right: -12px;
 
             &:hover {
                 color: @text-color-highlight;
                 cursor: pointer;
+            }
+
+            &::before {
+                width: auto;
+                margin-right: 0;
             }
         }
 
